--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is Nick Rathfelder and I am a 2nd year electrical engineering student currently studying at the University of Waterloo. I am an adaptable and results driven student in search of opportunities to explore my passions for PCB and chip design. My skills in circuit design and programming are constantly being improved through my design team work and various side projects.  </p>
+          <p>My name is Nick Rathfelder and I am a 3nd year electrical engineering student currently studying at the University of Waterloo. I am an adaptable and results driven student in search of opportunities to explore my passions for PCB and chip design. My skills in circuit design and programming are constantly being improved through my design team work and various side projects.  </p>
         </div>
 
         <div class="row">
@@ -189,7 +189,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Quartus Prime <i class="val">75%</i></span>
+              <span class="skill">STM32 Cube <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -200,21 +200,21 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">C++ <i class="val">80%</i></span>
+              <span class="skill">Embedded C <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Python <i class="val">90%</i></span>
+              <span class="skill">C++ <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">55%</i></span>
+              <span class="skill">Python <i class="val">55%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -244,7 +244,7 @@
               <ul>
                 <li>113 Duncombe Rd, Waterford ON</li>
                 <li>(519) 427-4407</li>
-                <li>nhrathfe@uwtaerloo.ca</li>
+                <li>nhrathfe@uwaterloo.ca</li>
               </ul>
             </div>
 
@@ -253,9 +253,9 @@
               <h4>Bachelor of Applied Science &amp; Electrical Engineering</h4>
               <h5>2022 - 2027</h5>
               <p><em>University of Waterloo, Waterloo ON</em></p>
-              <p>GPA: 3.76</p>
-              <p>Deans Honour List: 2A</p>
-              <p>Design Teams: UW Baja SAE, UW Formula Electric</p>
+              <p>GPA: 3.82</p>
+              <p>Term Distinction: 2A, 2B</p>
+              <p>Design Teams: UW Baja SAE, Waterloo Aerial Robotics Group</p>
 
             </div>
             <!--
@@ -268,6 +268,16 @@
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
+             <div class="resume-item">
+              <h4>Controls and Electrical Engineering Intern</h4>
+              <h5>January 2025 - April 2025</h5>
+              <p><em>Musashi AI, Waterloo, ON </em></p>
+              <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
+            </div>
             <div class="resume-item">
               <h4>Electrical Engineering Intern</h4>
               <h5>September 2023 - December 2023</h5>
