--- a/index.html
+++ b/index.html
@@ -326,11 +326,11 @@
             <div class="side-project-group-title">Control PCB</div>
             <div class="side-project-images-row">
               <figure class="side-project-image-figure">
-                <img src="assets/img/projects/example.jpg" alt="">
+                <img src="assets/img/projects/CoilgunControlBoardSchematic.jpg" alt="">
                 <figcaption>Schematic</figcaption>
               </figure>
               <figure class="side-project-image-figure">
-                <img src="assets/img/projects/example.jpg" alt="">
+                <img src="assets/img/projects/coilgun_control_final.jpg" alt="">
                 <figcaption>Prototype Board</figcaption>
               </figure>
             </div>
@@ -340,12 +340,12 @@
             <div class="side-project-group-title">Wire Harness</div>
             <div class="side-project-images-row">
               <figure class="side-project-image-figure">
-                <img src="assets/img/projects/example.jpg" alt="">
+                <img src="assets/img/projects/Coilgun_Wire_Harness.jpg" alt="">
                 <figcaption>Schematic</figcaption>
               </figure>
               <figure class="side-project-image-figure">
-                <img src="assets/img/projects/example.jpg" alt="">
-                <figcaption>Final Assembly</figcaption>
+                <img src="assets/img/projects/coil_assembly.jpg" alt="">
+                <figcaption>Coil Assembly</figcaption>
               </figure>
             </div>
           </div>
@@ -354,11 +354,11 @@
             <div class="side-project-group-title">Microcontroller Programming</div>
             <div class="side-project-images-row">
               <figure class="side-project-image-figure">
-                <img src="assets/img/projects/example.jpg" alt="">
+                <img src="assets/img/projects/coilgun_ioc.jpg" alt="">
                 <figcaption>IOC File</figcaption>
               </figure>
               <figure class="side-project-image-figure">
-                <img src="assets/img/projects/example.jpg" alt="">
+                <img src="assets/img/projects/coilgun_logic.jpg" alt="">
                 <figcaption>Main Control Loop</figcaption>
               </figure>
             </div>
@@ -369,11 +369,11 @@
             <div class="side-project-group-title">Mechanical Design</div>
             <div class="side-project-images-row">
               <figure class="side-project-image-figure">
-                <img src="assets/img/projects/example.jpg" alt="">
+                <img src="assets/img/projects/coilgun_sldworks.jpg" alt="">
                 <figcaption>Primary Coil Design</figcaption>
               </figure>
               <figure class="side-project-image-figure">
-                <img src="assets/img/projects/example.jpg" alt="">
+                <img src="assets/img/projects/loadingcoil_sldworks.jpg" alt="">
                 <figcaption>Loading Coil Design</figcaption>
               </figure>
             </div>
@@ -398,11 +398,11 @@
             <div class="side-project-group-title">Control PCB</div>
             <div class="side-project-images-row">
               <figure class="side-project-image-figure">
-                <img src="assets/img/projects/example.jpg" alt="">
+                <img src="assets/img/projects/WRP_Schem.jpg" alt="">
                 <figcaption>Schematic</figcaption>
               </figure>
               <figure class="side-project-image-figure">
-                <img src="assets/img/projects/example.jpg" alt="">
+                <img src="assets/img/projects/WRP_Front.jpg" alt="">
                 <figcaption>3D Model</figcaption>
               </figure>
             </div>
@@ -412,11 +412,11 @@
             <div class="side-project-group-title">Embedded Systems</div>
             <div class="side-project-images-row">
               <figure class="side-project-image-figure">
-                <img src="assets/img/projects/example.jpg" alt="">
+                <img src="assets/img/projects/wrp_ioc.jpg" alt="">
                 <figcaption>IOC File</figcaption>
               </figure>
               <figure class="side-project-image-figure">
-                <img src="assets/img/projects/example.jpg" alt="">
+                <img src="assets/img/projects/wrp_main.jpg" alt="">
                 <figcaption>Main Control Loop</figcaption>
               </figure>
             </div>
