--- a/index.html
+++ b/index.html
@@ -117,14 +117,19 @@
         }
 
         section {
-            padding: 5rem 0;
-            min-height: 100vh;
+            padding: 4rem 0;
+            min-height: auto;
             display: flex;
             align-items: center;
         }
 
         section:first-of-type {
             padding-top: 6rem;
+            min-height: 100vh;
+        }
+
+        section#home {
+            min-height: 100vh;
         }
 
         /* Hero Section */
@@ -248,9 +253,9 @@
 
         /* Section Titles */
         .section-title {
-            font-size: 2.5rem;
+            font-size: 2.25rem;
             font-weight: 700;
-            margin-bottom: 3rem;
+            margin-bottom: 2.5rem;
             color: var(--primary-color);
             position: relative;
             display: inline-block;
@@ -259,7 +264,7 @@
         .section-title::after {
             content: '';
             position: absolute;
-            bottom: -10px;
+            bottom: -8px;
             left: 0;
             width: 60%;
             height: 3px;
@@ -279,13 +284,12 @@
             border: 1px solid var(--border-color);
             border-radius: 1rem;
             padding: 2rem;
-            transition: all 0.3s;
+            transition: border-color 0.2s, transform 0.2s;
         }
 
         .info-card:hover {
             border-color: var(--primary-color);
-            transform: translateY(-4px);
-            box-shadow: 0 10px 30px rgba(6, 182, 212, 0.2);
+            transform: translateY(-2px);
         }
 
         .info-card h3 {
@@ -398,7 +402,7 @@
 
         .experience-item {
             position: relative;
-            margin-bottom: 3rem;
+            margin-bottom: 2rem;
             padding-left: 2rem;
         }
 
@@ -419,28 +423,27 @@
             background: var(--card-bg);
             border: 1px solid var(--border-color);
             border-radius: 1rem;
-            padding: 2rem;
-            transition: all 0.3s;
+            padding: 1.5rem;
+            transition: border-color 0.2s, transform 0.2s;
         }
 
         .experience-card:hover {
             border-color: var(--primary-color);
-            transform: translateX(8px);
-            box-shadow: 0 10px 30px rgba(6, 182, 212, 0.2);
+            transform: translateX(4px);
         }
 
         .experience-header {
-            margin-bottom: 1rem;
+            margin-bottom: 0.75rem;
         }
 
         .experience-title {
-            font-size: 1.4rem;
+            font-size: 1.25rem;
             color: var(--text-primary);
             margin-bottom: 0.25rem;
         }
 
         .experience-company {
-            font-size: 1.1rem;
+            font-size: 1rem;
             color: var(--primary-color);
             margin-bottom: 0.5rem;
         }
@@ -451,23 +454,24 @@
             background: rgba(6, 182, 212, 0.2);
             color: var(--primary-color);
             border-radius: 0.25rem;
-            font-size: 0.9rem;
+            font-size: 0.85rem;
             font-weight: 500;
         }
 
         .experience-description {
             color: var(--text-secondary);
-            line-height: 1.7;
-            margin-top: 1rem;
+            line-height: 1.6;
+            margin-top: 0.75rem;
+            font-size: 0.95rem;
         }
 
         .experience-description ul {
-            margin-top: 0.75rem;
+            margin-top: 0.5rem;
             padding-left: 1.5rem;
         }
 
         .experience-description li {
-            margin-bottom: 0.5rem;
+            margin-bottom: 0.35rem;
         }
 
         /* Projects Section */
@@ -476,13 +480,13 @@
         }
 
         .featured-projects {
-            margin-bottom: 4rem;
+            margin-bottom: 3rem;
         }
 
         .projects-grid {
             display: grid;
             grid-template-columns: 1fr;
-            gap: 2rem;
+            gap: 1.5rem;
         }
 
         .project-card {
@@ -490,18 +494,17 @@
             border: 1px solid var(--border-color);
             border-radius: 1rem;
             overflow: hidden;
-            transition: all 0.3s;
+            transition: border-color 0.2s, transform 0.2s;
         }
 
         .project-card:hover {
             border-color: var(--primary-color);
-            transform: translateY(-4px);
-            box-shadow: 0 10px 30px rgba(6, 182, 212, 0.2);
+            transform: translateY(-2px);
         }
 
         .project-image {
             width: 100%;
-            height: 250px;
+            height: 200px;
             background: linear-gradient(135deg, var(--darker-bg), var(--card-bg));
             display: flex;
             align-items: center;
@@ -520,14 +523,14 @@
         }
 
         .project-content {
-            padding: 2rem;
+            padding: 1.5rem;
         }
 
         .project-header {
             display: flex;
             align-items: flex-start;
             justify-content: space-between;
-            margin-bottom: 1rem;
+            margin-bottom: 0.75rem;
         }
 
         .project-type {
@@ -558,29 +561,30 @@
         }
 
         .project-card h3 {
-            font-size: 1.5rem;
+            font-size: 1.35rem;
             margin-bottom: 0.5rem;
             color: var(--text-primary);
         }
 
         .project-description {
             color: var(--text-secondary);
-            margin-bottom: 1.5rem;
-            line-height: 1.7;
+            margin-bottom: 1rem;
+            line-height: 1.6;
+            font-size: 0.95rem;
         }
 
         .project-highlights {
             background: var(--dark-bg);
-            padding: 1rem;
+            padding: 0.75rem;
             border-radius: 0.5rem;
-            margin-bottom: 1.5rem;
+            margin-bottom: 1rem;
             border-left: 3px solid var(--accent-color);
         }
 
         .project-highlights h4 {
             color: var(--text-primary);
-            font-size: 0.95rem;
-            margin-bottom: 0.75rem;
+            font-size: 0.9rem;
+            margin-bottom: 0.5rem;
             font-weight: 600;
         }
 
@@ -591,10 +595,10 @@
 
         .project-highlights li {
             color: var(--text-secondary);
-            padding: 0.25rem 0;
+            padding: 0.2rem 0;
             padding-left: 1.5rem;
             position: relative;
-            font-size: 0.9rem;
+            font-size: 0.85rem;
         }
 
         .project-highlights li::before {
@@ -608,7 +612,7 @@
             display: flex;
             flex-wrap: wrap;
             gap: 0.5rem;
-            margin-bottom: 1.5rem;
+            margin-bottom: 1rem;
         }
 
         .tech-tag {
@@ -891,13 +895,12 @@
             border: 1px solid var(--border-color);
             border-radius: 1rem;
             padding: 2rem;
-            transition: all 0.3s;
+            transition: border-color 0.2s, transform 0.2s;
         }
 
         .skill-category:hover {
             border-color: var(--primary-color);
-            transform: translateY(-4px);
-            box-shadow: 0 10px 30px rgba(6, 182, 212, 0.2);
+            transform: translateY(-2px);
         }
 
         .skill-category-header {
@@ -1042,7 +1045,7 @@
             height: 3px;
             background: linear-gradient(90deg, var(--primary-color), var(--accent-color));
             z-index: 1001;
-            transition: width 0.1s;
+            will-change: width;
         }
 
         /* Responsive Design */
@@ -1092,7 +1095,7 @@
 
             section {
                 min-height: auto;
-                padding: 3rem 0;
+                padding: 2.5rem 0;
             }
 
             .social-links {
@@ -1799,15 +1802,28 @@
     </footer>
 
     <script>
-        // Scroll progress bar
-        function updateProgressBar() {
+        // Throttle function for better scroll performance
+        function throttle(func, wait) {
+            let timeout;
+            return function executedFunction(...args) {
+                const later = () => {
+                    clearTimeout(timeout);
+                    func(...args);
+                };
+                clearTimeout(timeout);
+                timeout = setTimeout(later, wait);
+            };
+        }
+
+        // Scroll progress bar - throttled for performance
+        const updateProgressBar = throttle(() => {
             const winScroll = document.body.scrollTop || document.documentElement.scrollTop;
             const height = document.documentElement.scrollHeight - document.documentElement.clientHeight;
             const scrolled = (winScroll / height) * 100;
             document.getElementById('progressBar').style.width = scrolled + '%';
-        }
+        }, 50);
 
-        window.addEventListener('scroll', updateProgressBar);
+        window.addEventListener('scroll', updateProgressBar, { passive: true });
 
         // Mobile menu toggle
         function toggleMenu() {
@@ -1882,8 +1898,8 @@
             }
         });
 
-        // Active navigation state based on scroll
-        window.addEventListener('scroll', () => {
+        // Active navigation state based on scroll - throttled for performance
+        const updateActiveNav = throttle(() => {
             const sections = document.querySelectorAll('section');
             const navLinks = document.querySelectorAll('.nav-links a');
             
@@ -1902,23 +1918,27 @@
                     link.classList.add('active');
                 }
             });
-        });
+        }, 100);
 
-        // Intersection Observer for fade-in animations
+        window.addEventListener('scroll', updateActiveNav, { passive: true });
+
+        // Simplified Intersection Observer - only fade in once
         const observerOptions = {
             threshold: 0.1,
-            rootMargin: '0px 0px -100px 0px'
+            rootMargin: '0px 0px -50px 0px'
         };
 
         const observer = new IntersectionObserver((entries) => {
             entries.forEach(entry => {
                 if (entry.isIntersecting) {
                     entry.target.classList.add('fade-in');
+                    observer.unobserve(entry.target); // Stop observing after animation
                 }
             });
         }, observerOptions);
 
-        document.querySelectorAll('.info-card, .experience-card, .project-card, .additional-card, .skill-category, .skill-item').forEach(el => {
+        // Only observe elements that need fade-in animation
+        document.querySelectorAll('.info-card, .experience-card, .project-card, .skill-category').forEach(el => {
             observer.observe(el);
         });
     </script>
